// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DateTime /> inputProps 1`] = `
<div
  className="datetime"
>
  <input
    className="datetime-input some-class"
    disabled={true}
    name="Some name"
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Some placeholder"
    required={true}
    value="2017-08-11 13:44:54"
  />
</div>
`;

exports[`<DateTime /> simple render 1`] = `
<div
  className="datetime"
>
  <input
    className="datetime-input"
    disabled={false}
    name={undefined}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder=""
    required={false}
    value="2017-08-11 13:44:54"
  />
</div>
`;
